Lists: minor improvements